start of the implementation of the keyword search logic

--- a/project-rework-government-funded-space-projects.ipynb
+++ b/project-rework-government-funded-space-projects.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bf4467e7",
+   "id": "189370cc",
    "metadata": {},
    "source": [
     "# Government Funding Space Projects - FAPESP"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6069a6f6",
+   "id": "c7e50f6b",
    "metadata": {},
    "source": [
     "While at AEB, I was tasked to study and analyze the open library of projects funded by FAPESP, an institution from the state of São Paulo that provide funds to scientific research to universities and companies, so that the agency could start drafting a proposal of partnership with them.\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b798a4d",
+   "id": "418b12c8",
    "metadata": {},
    "source": [
     "## Initializing the code"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb24c93e",
+   "id": "26932a9e",
    "metadata": {},
    "source": [
     "first things first, the tools we'll be using througout the work need to be imported to the workspace. In this case we'll be using _Pandas_ for data manipulation and mostly _Matplotlib_ for graphic generation and visualization"
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "181e2d34",
+   "id": "0f0ce127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3c90392",
+   "id": "14da2610",
    "metadata": {},
    "source": [
     "And also open the dataset"
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8c7db1ac",
+   "id": "91cf6241",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8452f6c",
+   "id": "a90f05ac",
    "metadata": {},
    "source": [
     "## Visualizing the Dataset"
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8e49262",
+   "id": "1e068988",
    "metadata": {},
    "source": [
     "To start the analysis, let's take an overview look at the dataframe."
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "af62d045",
+   "id": "ed9ebb56",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "db5cbddf",
+   "id": "ab165ab1",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a50557a",
+   "id": "533ab9fc",
    "metadata": {},
    "source": [
     "It is worth to say that this dataset contains all the projects related to aeroespace engeneering "
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b65e0667",
+   "id": "2d843c7c",
    "metadata": {},
    "source": [
     "## Searching for core space technology"
@@ -418,11 +418,113 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5d91d0e",
+   "id": "cc4b106b",
    "metadata": {},
    "source": [
-    "One of the requirements of this project was that it must be focused in core space technology. The space sector is so general and relates to so many diferent fields that narrowing that scope was more than necessary. So, since we were looking for projects related to core space technology, the next thing I needed to do was to "
+    "One of the requirements of this project was that it must be focused in core space technology. The space sector is so general and relates to so many diferent fields that narrowing that scope was more than necessary. So, since we were looking for projects related to core space technology, the next thing I needed to do was to filter the dataframe based on this requirement.\n",
+    "\n",
+    "The strategy I adopted was to search for keywords related to the tech I was looking for in some descriptive columns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "cecf1b55",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "keywords = ['lançador', 'satélite', 'foguete', 'inpe']\n",
+    "contains_keyword_resumo = [any(keyword in description.lower() for keyword in keywords) for description in dataset['Resumo (Português)'].fillna('')]\n",
+    "contains_keyword_assuntos = [any(keyword in description.lower() for keyword in keywords) for description in dataset['Assuntos'].fillna('')]\n",
+    "\n",
+    "#contains_keyword = []\n",
+    "\n",
+    "#dataset[contains_keyword]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "62307246",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = zip(contains_keyword_resumo, contains_keyword_assuntos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "17293c4e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(False, False)\n",
+      "0\n",
+      "(False, False)\n",
+      "0\n",
+      "(False, False)\n",
+      "0\n",
+      "(False, False)\n",
+      "0\n",
+      "(False, True)\n",
+      "1\n",
+      "(True, True)\n",
+      "2\n",
+      "(True, True)\n",
+      "2\n",
+      "(False, False)\n",
+      "0\n",
+      "(True, True)\n",
+      "2\n",
+      "(True, True)\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, n in enumerate(a):\n",
+    "    if i < 10:\n",
+    "        print(n)\n",
+    "        print(sum(n))\n",
+    "    else:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "e822c251",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'bool' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[39], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m [\u001b[38;5;28;43many\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m)\u001b[49m]\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'bool' object is not iterable"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf13870d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -439,4 +541,11 @@
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "p
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
